# game_engine_cpp

./: .clang-format  .gitignore  0_collision_detection  1_spatial_subdivision  2  2_shape_rendering  2_text_rendering  3  3_collision_scenarios  3_tile_showcase  4_user_interface  5_map_generation  5_snake  6_pathing  :w  CMakeLists.txt  Makefile  README.md  build.sh  compile_assets.py  compile_commands.json  compile_shaders.sh  test.sh
examples/2_shape_rendering/: CMakeLists.txt  README.md  main.cpp
examples/2_shape_rendering/src/: main.cpp
examples/5_snake/: CMakeLists.txt  compile_commands.json  main.cpp
examples/5_snake/assets/: Sprite-0001.aseprite
examples/5_snake/src/: main.cpp
prototypes/game_snake/: CMakeLists.txt  build.sh  compile_commands.json  game_snake
prototypes/game_snake/assets/: Sprite-0001.aseprite
sdk/game_engine_sdk/: CMakeLists.txt
sdk/game_engine_sdk/logger/: CMakeLists.txt
sdk/game_engine_sdk/logger/public/logger/: io.h  logger.h
sdk/game_engine_sdk/logger/src/: io.cpp
sdk/game_engine_sdk/render_engine/: CMakeLists.txt
sdk/game_engine_sdk/render_engine/camera/: CMakeLists.txt
sdk/game_engine_sdk/render_engine/camera/public/camera/: Camera.h
sdk/game_engine_sdk/render_engine/camera/src/: Camera.cpp
sdk/game_engine_sdk/render_engine/camera/test/: CMakeLists.txt  camera2d_test.cpp
sdk/game_engine_sdk/render_engine/font/: CMakeLists.txt
sdk/game_engine_sdk/render_engine/font/public/font/: Glyph.h  OTFFont.h  Unicode.h
sdk/game_engine_sdk/render_engine/font/public/font/detail/: ifstream_util.h
sdk/game_engine_sdk/render_engine/font/src/: OTFFont.cpp  ifstream_util.cpp
sdk/game_engine_sdk/render_engine/font/src/otf_font/cff/: Type2Charstring.cpp
sdk/game_engine_sdk/render_engine/font/test/: CFFDict_test.cpp  CMakeLists.txt
sdk/game_engine_sdk/render_engine/graphics_pipeline/: CMakeLists.txt
sdk/game_engine_sdk/render_engine/graphics_pipeline/public/graphics_pipeline/: DescriptorSetLayoutBuilder.h  Resource.h  ShaderResource.h  SwapDescriptorSet.h  SwapDescriptorSetBuilder.h
sdk/game_engine_sdk/render_engine/graphics_pipeline/public/graphics_pipeline/geometry/: GeometryPipeline.h  GeometryPipelineDecriptorSet.h  GeometryPipelineSBO.h
sdk/game_engine_sdk/render_engine/graphics_pipeline/public/graphics_pipeline/quad/: QuadPipeline.h  QuadPipelineDescriptorSet.h  QuadPipelineSBO.h
sdk/game_engine_sdk/render_engine/graphics_pipeline/public/graphics_pipeline/text/: TextPipeline.h  TextPipelineDescriptorSet.h  TextPipelineSBO.h
sdk/game_engine_sdk/render_engine/graphics_pipeline/src/: DescriptorSetLayoutBuilder.cpp  ShaderResource.cpp  SwapDescriptorSet.cpp  SwapDescriptorSetBuilder.cpp
sdk/game_engine_sdk/render_engine/graphics_pipeline/src/geometry/: GeometryPipeline.cpp  GeometryPipelineDescriptorSet.cpp
sdk/game_engine_sdk/render_engine/graphics_pipeline/src/geometry/shaders/: compile_shaders.py  geometry_fragment.glsl  geometry_fragment.spv  geometry_fragment_shader.cpp  geometry_fragment_shader.h  geometry_vertex.glsl  geometry_vertex.spv  geometry_vertex_shader.cpp  geometry_vertex_shader.h
sdk/game_engine_sdk/render_engine/graphics_pipeline/src/quad/: QuadPipeline.cpp  QuadPipelineDescriptorSet.cpp
sdk/game_engine_sdk/render_engine/graphics_pipeline/src/quad/shaders/: compile_shaders.py  quad_fragment.glsl  quad_fragment.spv  quad_fragment_shader.cpp  quad_fragment_shader.h  quad_vertex.spv  quad_vertex_shader.cpp  quad_vertex_shader.h
sdk/game_engine_sdk/render_engine/graphics_pipeline/src/text/: TextPipeline.cpp  TextPipelineDescriptorSet.cpp
sdk/game_engine_sdk/render_engine/image/: CMakeLists.txt
sdk/game_engine_sdk/render_engine/image/public/image/: Image.h
sdk/game_engine_sdk/render_engine/image/src/: Image.cpp
sdk/game_engine_sdk/render_engine/test/: CMakeLists.txt  triangulate_glyphs.cpp
sdk/game_engine_sdk/render_engine/tiling/: CMakeLists.txt
sdk/game_engine_sdk/render_engine/tiling/public/tiling/: Grid.h  NoiseMap.h  Position.h  TileGrid.h  TilesetIndex.h  traits.h
sdk/game_engine_sdk/render_engine/tiling/src/: Position.cpp
sdk/game_engine_sdk/render_engine/tiling/test/: CMakeLists.txt  search_astar_test.cpp  wang_tiles_test.cpp  wang_tileset_constraint_test.cpp
sdk/game_engine_sdk/render_engine/triangulation/: CMakeLists.txt
sdk/game_engine_sdk/render_engine/triangulation/public/triangulation/: earcut.h
sdk/game_engine_sdk/render_engine/triangulation/src/: earcut.cpp
sdk/game_engine_sdk/render_engine/triangulation/test/: CMakeLists.txt  earcut_test.cpp
sdk/game_engine_sdk/render_engine/vulkan/: CMakeLists.txt
sdk/game_engine_sdk/render_engine/vulkan/public/vulkan/: CommandBufferManager.h  DescriptorImageInfo.h  DescriptorPool.h  DescriptorSet.h  DrawIndirectCommand.h  Fence.h  Framebuffer.h  ImageView.h  Pipeline.h  PipelineLayout.h  PushConstantRange.h  RenderPass.h  ShaderStage.h  SingleTimeCommandBuffer.h  SwapChain.h  SwapChainManager.h  TextureImage.h  Vertex.h  Viewport.h  traits.h
sdk/game_engine_sdk/render_engine/vulkan/src/: CommandBuffer.cpp  CommandBufferManager.cpp  CommandPool.cpp  DescriptorBufferInfo.cpp  DescriptorImageInfo.cpp  DescriptorPool.cpp  DescriptorSetLayout.cpp  Fence.cpp  Framebuffer.cpp  ImageView.cpp  Pipeline.cpp  PipelineLayout.cpp  RenderPass.cpp  Sampler.cpp  Semaphore.cpp  ShaderModule.cpp  SingleTimeCommandBuffer.cpp  SwapChain.cpp  SwapChainManager.cpp  TextureImage.cpp
sdk/game_engine_sdk/render_engine/vulkan/src/buffers/: IndexBuffer.cpp  StagingBuffer.cpp  VertexBuffer.cpp  common.cpp
sdk/game_engine_sdk/render_engine/vulkan/src/context/: DebugMessenger.cpp  Device.cpp  GraphicsContext.cpp  Instance.cpp  Surface.cpp
sdk/game_engine_sdk/render_engine/window/: CMakeLists.txt
sdk/game_engine_sdk/render_engine/window/public/window/: ViewportPoint.h  Window.h  WindowDimension.h  traits.h
sdk/game_engine_sdk/render_engine/window/src/: Window.cpp
sdk/game_engine_sdk/util/: CMakeLists.txt
sdk/game_engine_sdk/util/public/util/: assert.h  colors.h  io.h
sdk/game_engine_sdk/util/src/: colors.cpp  io.cpp
src/: io.cpp  (+9 more)
(+608 files in other folders)
