cmake_minimum_required(VERSION 3.28)

message(STATUS "Configuring render_engine modules")

project(render_engine)

option(RENDER_ENGINE_BUILD_TRIANGULATION "Build the triangulation module" ON)
option(RENDER_ENGINE_BUILD_FONT "Build the font module" ON)
option(RENDER_ENGINE_BUILD_IMAGE "Build the image module" ON)
option(RENDER_ENGINE_BUILD_CAMERA "Build the camera module" ON)
option(RENDER_ENGINE_BUILD_TILING "Build the tiling module" ON)
option(RENDER_ENGINE_BUILD_WINDOW "Build the window module" ON)
option(RENDER_ENGINE_BUILD_VULKAN "Build the vulkan module" ON)
option(RENDER_ENGINE_BUILD_GRAPHICS_PIPELINE "Build the graphics_pipeline module" ON)


if(RENDER_ENGINE_BUILD_TRIANGULATION)
    message(STATUS "Adding triangulation module")
    add_subdirectory(triangulation)
else()
    message(STATUS "Skipping triangulation module")
endif()

if(RENDER_ENGINE_BUILD_FONT)
    message(STATUS "Adding font module")
    add_subdirectory(font)
else()
    message(STATUS "Skipping font module")
endif()

if(RENDER_ENGINE_BUILD_IMAGE)
    message(STATUS "Adding image module")
    add_subdirectory(image)
else()
    message(STATUS "Skipping image module")
endif()

if(RENDER_ENGINE_BUILD_CAMERA)
    message(STATUS "Adding camera module")
    add_subdirectory(camera)
else()
    message(STATUS "Skipping camera module")
endif()

if(RENDER_ENGINE_BUILD_TILING)
    message(STATUS "Adding tiling module")
    add_subdirectory(tiling)
else()
    message(STATUS " Skipping tiling module")
endif()

if(RENDER_ENGINE_BUILD_WINDOW)
    message(STATUS "Adding window module")
    add_subdirectory(window)
else()
    message(STATUS " Skipping window module")
endif()

if(RENDER_ENGINE_BUILD_VULKAN)
    message(STATUS "Adding vulkan module")
    add_subdirectory(vulkan)
else()
    message(STATUS " Skipping vulkan module")
endif()

if(RENDER_ENGINE_BUILD_GRAPHICS_PIPELINE)
    message(STATUS "Adding graphics_pipeline module")
    add_subdirectory(graphics_pipeline)
else()
    message(STATUS " Skipping graphics_pipeline module")
endif()

